testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail02.stderr

overloadedrecfldsfail02.hs:8:18: error:
    Ambiguous field selector occurence: x
